--- a/lesson3/lesson/index.html
+++ b/lesson3/lesson/index.html
@@ -39,10 +39,10 @@
             </div>
         </div>
         <div class="logo">
-            <img src="img/Group 401.png" alt="logo 2">
-            <img src="img/Group 400.svg" alt="logo 1">
-            <img src="img/Group 402.png" alt="logo 3">
-            <img src="img/Group 403.png" alt="logo 4">
+            <img src="img/group_400.svg" alt="logo 2">
+            <img src="img/group_401.png" alt="logo 1">
+            <img src="img/group_402.png" alt="logo 3">
+            <img src="img/group_403.png" alt="logo 4">
         </div>
 
     </div>
